<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/android:colorBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/enter_project_name"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="?attr/colorOnPrimary" />

            <EditText
                android:id="@+id/etProjectName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="15dp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/project_name_hint"
                android:textColor="?attr/colorOnPrimary"
                android:backgroundTint="?attr/colorPrimary" />

            <Button
                android:id="@+id/btnCreateProject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/create_project"
                android:backgroundTint="?attr/colorPrimary"
                android:textColor="?attr/colorOnPrimary" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
